; ModuleID = '/home/carl/AnghaBench/openpilot/panda/drivers/linux/extr_panda.c_panda_init_ctx.c'
source_filename = "/home/carl/AnghaBench/openpilot/panda/drivers/linux/extr_panda.c_panda_init_ctx.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.panda_inf_priv = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { %struct.panda_inf_priv*, i32 }

@PANDA_MAX_TX_URBS = common dso_local global i32 0, align 4
@PANDA_CTX_FREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.panda_inf_priv*)* @panda_init_ctx to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @panda_init_ctx(%struct.panda_inf_priv* %0) #0 {
  %2 = alloca %struct.panda_inf_priv*, align 8
  %3 = alloca i32, align 4
  store %struct.panda_inf_priv* %0, %struct.panda_inf_priv** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %25, %1
  %5 = load i32, i32* %3, align 4
  %6 = load i32, i32* @PANDA_MAX_TX_URBS, align 4
  %7 = icmp slt i32 %5, %6
  br i1 %7, label %8, label %28

8:                                                ; preds = %4
  %9 = load i32, i32* @PANDA_CTX_FREE, align 4
  %10 = load %struct.panda_inf_priv*, %struct.panda_inf_priv** %2, align 8
  %11 = getelementptr inbounds %struct.panda_inf_priv, %struct.panda_inf_priv* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 1
  store i32 %9, i32* %16, align 8
  %17 = load %struct.panda_inf_priv*, %struct.panda_inf_priv** %2, align 8
  %18 = load %struct.panda_inf_priv*, %struct.panda_inf_priv** %2, align 8
  %19 = getelementptr inbounds %struct.panda_inf_priv, %struct.panda_inf_priv* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store %struct.panda_inf_priv* %17, %struct.panda_inf_priv** %24, align 8
  br label %25

25:                                               ; preds = %8
  %26 = load i32, i32* %3, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %3, align 4
  br label %4

28:                                               ; preds = %4
  %29 = load %struct.panda_inf_priv*, %struct.panda_inf_priv** %2, align 8
  %30 = getelementptr inbounds %struct.panda_inf_priv, %struct.panda_inf_priv* %29, i32 0, i32 1
  %31 = load %struct.panda_inf_priv*, %struct.panda_inf_priv** %2, align 8
  %32 = getelementptr inbounds %struct.panda_inf_priv, %struct.panda_inf_priv* %31, i32 0, i32 0
  %33 = load %struct.TYPE_2__*, %struct.TYPE_2__** %32, align 8
  %34 = call i32 @ARRAY_SIZE(%struct.TYPE_2__* %33)
  %35 = call i32 @atomic_set(i32* %30, i32 %34)
  ret void
}

declare dso_local i32 @atomic_set(i32*, i32) #1

declare dso_local i32 @ARRAY_SIZE(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
